# ckanapi

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING  COPYING.fr  COPYING.fra  README.md  README.rst  ckanapi.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  test.yml
ckanapi/: __init__.py  cli.py  commands.py  common.py  const.py  datapackage.py  errors.py  load.py  localckan.py  remoteckan.py  stats.py  testappckan.py  version.py
ckanapi/cli/: action.py  batch.py  ckan_click.py  delete.py  dump.py  dump_metadata.py  load.py  main.py  paster.py  progressbar.py  search.py  utils.py  workers.py
ckanapi/tests/: test_call.py  test_cli_action.py  test_cli_datapackage.py  test_cli_dump.py  test_cli_dump_metadata.py  test_cli_load.py  test_cli_workers.py  test_common.py  test_datapackage.py  test_remote.py  test_testapp.py
ckanapi/tests/mock/: mock_ckan.py
examples/: update_single_field.py
tests/: test_call.py  test_testapp.py  test_util.py
